no qc pass: p4lang: gre routing over ipv6 loopback
no qc pass: p4lang: gre routing over ipv4 loopback
no qc pass: p4lang: gre routing over ipv6
no qc pass: p4lang: gre routing over ipv4
qc pass: p4lang: tmux routing over ipv4
qc pass: p4lang: tmux routing over ipv6
qc pass: p4lang: tmux routing over ipv4 loopback
qc pass: p4lang: tmux routing over ipv6 loopback
qc pass: p4lang: tmux routing over vlan
qc pass: p4lang: tmux routing over bundle
qc pass: p4lang: tmux routing over bundle vlan
qc pass: p4lang: tmux routing over hairpin
qc pass: p4lang: tmux routing over hairpin vlan
qc pass: p4lang: tmux routing over bridge
qc pass: p4lang: tmux routing over vlan bridge
qc pass: p4lang: tmux mpls over ipv4
qc pass: p4lang: tmux mpls over ipv6
qc pass: p4lang: tmux mpls over ipv4 loopback
qc pass: p4lang: tmux mpls over ipv6 loopback
qc pass: p4lang: tmux mpls over vlan
qc pass: p4lang: tmux mpls over bundle
qc pass: p4lang: tmux mpls over bundle vlan
qc pass: p4lang: tmux mpls over hairpin
qc pass: p4lang: tmux mpls over hairpin vlan
qc pass: p4lang: tmux mpls over bridge
qc pass: p4lang: tmux mpls over vlan bridge
qc pass: p4lang: bridging over tmux
qc pass: p4lang: bridging over tmux vlan
qc pass: p4lang: mldp core over tmux
qc pass: p4lang: bier core over tmux
qc pass: p4lang: tmux mpls pop
qc pass: p4lang: tmux mpls push
qc pass: p4lang: l2vpn over tmux mpls
qc pass: p4lang: l3vpn over tmux mpls
---------------------------------- 2023-11-29 20:35:18 23.11.29
no qc pass: sgt tunnel encapsulation
no qc pass: macsec over tunnel
qc pass: macsec over gre
qc pass: sgt gre encapsulation
---------------------------------- 2023-11-29 21:16:08 23.11.29
qc pass: bridged ethernet over tmux
qc pass: bridged ethernet over l2tp3
qc pass: macsec over tmux
qc pass: macsec over l2tp3
qc pass: sgt tmux encapsulation
qc pass: sgt l2tp3 encapsulation
---------------------------------- 2023-11-30 23:11:31 23.11.30
no todo: generalise server access- knobs