@@ -383,6 +383,7 @@ public class servHttp extends servGeneric implements prtServS {
         l.add(null, "3 4,.    api                        allow api calls");
         l.add(null, "4 4,.      exec                     allow exec commands");
         l.add(null, "4 4,.      show                     allow show commands");
+        l.add(null, "4 4,.      script                   allow script commands");
         l.add(null, "4 4,.      config                   allow config commands");
         l.add(null, "4 4,.      ipinfo                   allow ip info commands");
         secInfoUtl.getHelp(l, 3, "ipinfo            allow ipinfo api");
