@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.12.1-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-12-01 19:17:02, took 00:16:34, with 80 workers, on 3392 cases, 0 failed, 0 traces, 14 retries
+-;-;-;2023-12-01 22:09:20, took 00:11:35, with 80 workers, on 3392 cases, 0 failed, 0 traces, 7 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
