@@ -3393,7 +3393,6 @@ qc pass: udp forwarder server
 todo: honeypot to wireformat, decode
 todo: image viewer to file manager
 todo: game butterfly hanoy, modem, mdev
-todo: server http to have api for scripts
 todo: acl to have fake knob that syn-rst, udp-port-unreach, at the dataplanes
 todo: inspection dropped sessions do be able to close the sessions properly at layer4
 todo: consider draft-ietf-idr-performance-routing
