@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.1-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-01 19:17:02, took 00:16:34, with 80 workers, on 3392 cases, 0 failed, 0 traces, 14 retries<br/>
+tested: 2023-12-01 22:09:20, took 00:11:35, with 80 workers, on 3392 cases, 0 failed, 0 traces, 7 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
