@@ -4,9 +4,6 @@ image viewer to file manager
 
 game butterfly hanoy, modem, mdev
 
-server http to have api for scripts
-
-
 acl to have fake knob that syn-rst, udp-port-unreach, at the dataplanes
 
 inspection dropped sessions do be able to close the sessions properly at layer4
